finished the first api fetch
